--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -116,7 +116,7 @@
                             <div class="form-group">
                                 <label class="form-control-label" style="width: 100%;">Email</label>
                                 <input type="text" id="profil-email" name="email" value="imeprezime@email.com" class="form-control" style="float: left;width:85%;">
-                                <button type='button' id="kontakt" class='btn btn-outline-primary' style='position:relative; float:right; height: 40px; display : none;'><i class='fas fa-envelope'></i></button>
+                                <button type='button' id="kontakt" class='btn btn-outline-primary' style='position:relative; float:right; height: 40px;'><i class='fas fa-envelope'></i></button>
                             </div>
                             <div class="form-group" id="telefoni">
                                 <label class="form-control-label" style="width: 100%;">Telefoni</label>
