--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -45,7 +45,7 @@
                     <i class="far fa-user" aria-hidden="true"></i>
                 </div>
                 <div class="col-lg-12 profile-title">
-                    <p id="profil-korisnicko-ime" name="korisnicko-ime"> KORISNICKO IME </p>
+                    <p id="profil-korisnicko-ime" name="korisnicko-ime" style="display : none;"> KORISNICKO IME </p>
                 </div>
                 <div class="col-lg-12 profile-form">
                     <div class="col-lg-12 profile-form">
